[package]
name = "support_tools"
version = "0.1.0"
authors = ["layne <layneyy@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlsxwriter = "0.3.0"
calamine = "0.16.1"
rttp_client = "0.1"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "mysql", "chrono"] }
tokio = { version = "0.2.3", features = ["macros"] }
lazy_static = "1.4.0"
futures = "0.3.4"